--- a/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
@@ -50,7 +50,7 @@
     </div>
     @if (cart != null && cart.Any())
     {
-        <form action="@Url.Action("DatHang", "SanPhams_64130053")" method="post" class="d-flex justify-content-center align-items-center">
+        <form action="@Url.Action("DatHang", "San_pham")" method="post" class="d-flex justify-content-center align-items-center">
             <button type="submit" class="btn btn-primary">Đặt hàng</button>
         </form>
     }
