upload view sản phẩm, khuyến mãi

--- a/ProjectCDTT_63132701/Content/sanpham.css
+++ b/ProjectCDTT_63132701/Content/sanpham.css
@@ -91,7 +91,7 @@ table {
     }
 
     table th {
-        background-color: #f8f8f8;
+        background-color: #f5f0eb;
         font-weight: bold;
     }
 
