--- a/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="~/Images/nhan6.jpg" alt="Nhẫn cưới" class="img-fluid rounded shadow">
+                    <img src="~/Images/mau19.jpg" alt="Nhẫn cưới" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
