--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -88,7 +88,7 @@
                 @Html.ActionLink("Dịch vụ", "../san_pham/DichVu", new { @class = "nav-link" })
             </li>
             <li class="nav-item">
-                @Html.ActionLink("Khuyến mãi", "../khach_hangs_63132701/Index", new { @class = "nav-link" })
+                @Html.ActionLink("Khuyến mãi", "../san_pham/KhuyenMai", new { @class = "nav-link" })
             </li>
         </ul>
     </div>
