--- a/ProjectCDTT_63132701/Content/thuonghieu.css
+++ b/ProjectCDTT_63132701/Content/thuonghieu.css
@@ -3,14 +3,14 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
+    background-color: #f5f6f7;
     color: #333;
 }
 
 /* Phần About */
 .about-section {
     padding: 80px 0;
-    background-color: #f5f0eb; /* Màu be  */
+    background-color: #f5f0eb;
 }
     .about-section .container {
         display: flex;
