--- a/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
@@ -2,14 +2,22 @@
     var cart = ViewBag.Cart as IEnumerable<ProjectCDTT_63132701.Models.ChiTietGioHang>;
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/giohang.css" />
+</head>
+
 
 <div class="container">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
     <h2>Giỏ Hàng</h2>
     <table class="table table-bordered">
         <thead>
             <tr>
+                <th>Ảnh sản phẩm</th>
                 <th>Tên sản phẩm</th>
                 <th>Giá</th>
                 <th>Số lượng</th>
@@ -29,6 +37,7 @@
                 foreach (var item in cart)
                 {
                     <tr>
+                        <td><img src="@Url.Content("~/Images/" + item.SanPham.AnhSanPham)" alt="@item.SanPham.TenSP"></td>
                         <td>@item.SanPham.TenSP</td>
                         <td>@item.DonGia.ToString("N0") đ</td>
                         <td>@item.SoLuong</td>
@@ -36,7 +45,7 @@
                         <td>
                             <form action="@Url.Action("RemoveFromCart", "San_pham")" method="post">
                                 <input type="hidden" name="MaSP" value="@item.MaSP" />
-                                <button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash"></i></button>
+                                <button type="submit" class="btn btn-light"><i class="fa-solid fa-trash-can"></i></button>
                             </form>
                         </td>
                     </tr>
@@ -51,7 +60,7 @@
     @if (cart != null && cart.Any())
     {
         <form action="@Url.Action("DatHang", "San_pham")" method="post" class="d-flex justify-content-center align-items-center">
-            <button type="submit" class="btn btn-primary">Đặt hàng</button>
+            <button type="submit" class="btn btn-dark">Đặt hàng</button>
         </form>
     }
 </div>
