--- a/ProjectCDTT_63132701/Views/san_pham/Lac_Tay.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Lac_Tay.cshtml
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/sanpham.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="~/Content/Home.css" />
 </head>
 
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="@Url.Action("Index", "San_pham")">Trang chủ</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Lắc Tay Bạc</li>
-    </ol>
-</nav>
+<div class="breadcrumb-container">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="@Url.Action("Index", "San_pham")">Trang chủ</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Lắc tay bạc</li>
+        </ol>
+    </nav>
+</div>
 
 <h2>Lắc Tay Bạc</h2>
 
@@ -59,7 +60,7 @@
                 <p class="price">@sp.DonGia.ToString("N0") VNĐ</p>
                 @*             <p class="type">@sp.loai_bac</p>*@
                 @*<p class="date">@sp.ngay_tao?.ToString("dd/MM/yyyy")</p>*@
-                <button class="btn btn-dark">Mua ngay</button>
+              
             </div>
         </div>
     }
