--- a/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
@@ -33,7 +33,7 @@
                 <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
                 <td>@Html.DisplayFor(modelItem => item.DiaChi)</td>
                 <td>
-                    @if (item.VaiTro == "Quản trị")
+                    @if (item.VaiTro == "Admin")
                     {
                         <span class="badge bg-danger">Quản trị</span>
                     }
