--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -4,15 +4,20 @@
     ViewBag.Title = Model.TenSP;
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
+
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/Content/chitietsanpham.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
+
 <div class="product-detail">
+
     <div class="product-image">
         <img src="@Url.Content("~/Images/" + Model.AnhSanPham)" alt="@Model.TenSP">
     </div>
+
     <div class="product-info">
         <h2>@Model.TenSP</h2>
         <p class="price">@Model.DonGia.ToString("N0") VNĐ</p>
@@ -24,10 +29,14 @@
             <input type="hidden" name="returnUrl" value="@Request.QueryString["returnUrl"]" />
             <label for="SoLuong">Số lượng:</label>
             <input type="number" name="SoLuong" value="1" min="1" required />
-            <button class="btn btn-dark">Thêm vào giỏ hàng</button>
+            <button class="btn btn-dark btn-add-to-cart">Thêm vào giỏ hàng</button>
+
         </form>
     </div>
 </div>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     @if (TempData["ErrorMessage"] != null)
@@ -41,3 +50,5 @@
         </text>
     }
 </script>
+
+
