--- a/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
@@ -54,18 +54,26 @@
 <div class="product-container">
     @foreach (var sp in Model)
     {
-<a href="@Url.Action("ChiTietSanPham", "San_pham", new { id = sp.MaSP, returnUrl = Request.Url.PathAndQuery  })" class="product-card-link">
-    <div class="product-card">
-        <img src="@Url.Content("~/Images/" + sp.AnhSanPham)" alt="@sp.TenSP">
-        <div class="product-info">
-            <h3>@sp.TenSP</h3>
-            <p class="price">@sp.DonGia.ToString("N0") VNĐ</p>
-        </div>
-    </div>
-</a>
+        <a href="@Url.Action("ChiTietSanPham", "San_pham", new { id = sp.MaSP })" class="product-card">
+            <!-- Nút yêu thích -->
+            <div class="favorite-button">
+                <form method="post" action="@Url.Action("AddToWishlist", "San_pham")">
+                    <input type="hidden" name="MaSP" value="@sp.MaSP" />
+                    <button type="submit" class="btn-favorite">
+                        <i class="fa-regular fa-heart"></i>
+                    </button>
+                </form>
+            </div>
 
+            <img src="@Url.Content("~/Images/" + sp.AnhSanPham)" alt="@sp.TenSP">
+            <div class="product-info">
+                <h3>@sp.TenSP</h3>
+                <p class="price">@sp.DonGia.ToString("N0") VNĐ</p>
+            </div>
+        </a>
     }
 </div>
+
 
 @*<div class="row">
         @foreach (var item in Model)
