--- a/ProjectCDTT_63132701/Views/san_pham/YeuThich.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/YeuThich.cshtml
@@ -1,8 +1,53 @@
-﻿
-@{
-    ViewBag.Title = "YeuThich";
+﻿@{
+    var wishlist = Model as IEnumerable<ProjectCDTT_63132701.Models.YeuThich>;
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2>Yêu thích</h2>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/giohang.css" />
+</head>
 
+<div class="container">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2>Danh sách yêu thích</h2>
+
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Ảnh sản phẩm</th>
+                <th>Tên sản phẩm</th>
+                <th>Giá</th>
+                <th>Xóa</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (wishlist == null || !wishlist.Any())
+            {
+                <tr>
+                    <td colspan="4" class="text-center">Chưa có sản phẩm yêu thích nào.</td>
+                </tr>
+            }
+            else
+            {
+                foreach (var item in wishlist)
+                {
+                    <tr>
+                        <td><img src="@Url.Content("~/Images/" + item.SanPham.AnhSanPham)" alt="@item.SanPham.TenSP" width="50"></td>
+                        <td>@item.SanPham.TenSP</td>
+                        <td>@item.SanPham.DonGia.ToString("N0") VNĐ</td>
+                        <td>
+                            <form action="@Url.Action("RemoveFromWishlist", "San_pham")" method="post">
+                                <input type="hidden" name="MaSP" value="@item.SanPham.MaSP" />
+                                <button type="submit" class="btn btn-light"><i class="fa-solid fa-trash-can"></i></button>
+                            </form>
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+</div>
