--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -37,7 +37,12 @@
             <!-- Biểu tượng yêu thích và giỏ hàng -->
             <div class="header-right">
                 <div>
-                    <i class="far fa-heart"></i> <span>0</span>
+                    <a href="@Url.Action("YeuThich", "San_pham")" style="text-decoration: none; color: inherit;">
+                        <i class="far fa-heart"></i>
+                        <span style="@(Session["FavoriteCount"] != null && (int)Session["FavoriteCount"] > 0 ? "background-color: red; color: white;" : "background-color: #ddd; color: black;")">
+                            @(Session["FavoriteCount"] ?? 0)
+                        </span>
+                    </a>
                 </div>
                 <div>
                     <a href="@Url.Action("GioHang", "San_pham")" style="text-decoration: none; color: inherit;">
