--- a/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
@@ -3,10 +3,11 @@
     ViewBag.Title = "Login";
     Layout = "~/Views/shared/_LayoutUser.cshtml";
 }
-
-<link rel="stylesheet" href="~/Content/login.css" />
-
-
+<head>
+    <link rel="stylesheet" href="~/Content/login.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 <div class="container">
     <div class="form-box">
         <h2>Đăng nhập</h2>
@@ -25,12 +26,10 @@
             </div>
 
             <div class="button-container">
-                <button type="submit" class="btn btn-primary">Đăng nhập</button>
-
+                <button type="submit" class="btn btn-dark">ĐĂNG NHẬP</button>
             </div>
         }
 
-@*        <p>Bạn chưa có tài khoản? <a href="/Account_64130053/Register">Đăng ký</a></p>*@
+        <p>Chưa có tài khoản? <a href="/Tai_khoan/Register">Đăng ký</a></p>
     </div>
 </div>
-
