--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -39,11 +39,12 @@
                 <div>
                     <a href="@Url.Action("YeuThich", "San_pham")" style="text-decoration: none; color: inherit;">
                         <i class="far fa-heart"></i>
-                        <span style="@(Session["FavoriteCount"] != null && (int)Session["FavoriteCount"] > 0 ? "background-color: red; color: white;" : "background-color: #ddd; color: black;")">
+                        <span id="wishlist-count" style="@(Session["FavoriteCount"] != null && (int)Session["FavoriteCount"] > 0 ? "background-color: red; color: white;" : "background-color: #ddd; color: black;")">
                             @(Session["FavoriteCount"] ?? 0)
                         </span>
                     </a>
                 </div>
+
                 <div>
                     <a href="@Url.Action("GioHang", "San_pham")" style="text-decoration: none; color: inherit;">
                         <i class="fas fa-shopping-bag"></i>
@@ -154,5 +155,41 @@
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+    $(document).ready(function () {
+        $.get('@Url.Action("GetWishlistInfo", "San_pham")', function (response) {
+            if (response.success) {
+                $("#wishlist-count").text(response.count);
+                $(".btn-favorite").each(function () {
+                    var productId = $(this).data("id");
+                    if (response.wishlist.includes(productId)) {
+                        $(this).find("i").removeClass("fa-regular").addClass("fa-solid").css("color", "red");
+                    }
+                });
+            }
+        });
+        $(document).on("click", ".btn-favorite", function (e) {
+            e.preventDefault();
+            var btn = $(this);
+            var maSP = btn.data("id");
+
+            $.ajax({
+                url: '@Url.Action("AddToWishlist", "San_pham")',
+                type: 'POST',
+                data: { MaSP: maSP },
+                success: function (response) {
+                    $("#wishlist-count").text(response.count);
+                    btn.find("i").removeClass("fa-regular").addClass("fa-solid").css("color", "red");
+                },
+                error: function () {
+                    alert("Có lỗi xảy ra, vui lòng thử lại.");
+                }
+            });
+        });
+    });
+    </script>
+
+
 </body>
 </html>
