--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -13,7 +13,6 @@
 </head>
 
 <div class="product-detail">
-
     <div class="product-image">
         <img src="@Url.Content("~/Images/" + Model.AnhSanPham)" alt="@Model.TenSP">
     </div>
@@ -24,16 +23,34 @@
         <p class="description">@Model.MoTa</p>
         <p class="stock">Số lượng còn lại: @Model.SoLuong</p>
         <p class="type">Loại bạc: @Model.LoaiBac</p>
+
+        <div class="quantity-container">
+            <label for="SoLuong">Số lượng:</label>
+            <button type="button" class="btn-quantity" onclick="changeQuantity(-1)">-</button>
+            <input type="number" id="SoLuong" name="SoLuong" value="1" min="1" readonly />
+            <button type="button" class="btn-quantity" onclick="changeQuantity(1)">+</button>
+        </div>
+
         <form method="post" action="@Url.Action("AddToCart", "San_pham")">
             <input type="hidden" name="MaSP" value="@Model.MaSP" />
+            <input type="hidden" name="SoLuong" value="1" />  <!-- Thêm số lượng mặc định -->
             <input type="hidden" name="returnUrl" value="@Request.QueryString["returnUrl"]" />
-            <label for="SoLuong">Số lượng:</label>
-            <input type="number" name="SoLuong" value="1" min="1" required />
-            <button class="btn btn-dark btn-add-to-cart">Thêm vào giỏ hàng</button>
 
+            <button type="submit" class="checkout-btn full-width">MUA NGAY<br></button>
+            <button type="submit" class="add-to-cart-btn"><i class="fa fa-shopping-bag"></i> Thêm vào giỏ hàng</button>
         </form>
+
     </div>
 </div>
+
+<script>
+    function changeQuantity(amount) {
+        let input = document.getElementById("SoLuong");
+        let value = parseInt(input.value) + amount;
+        if (value > 0) input.value = value;
+    }
+</script>
+
 
 
 
