--- a/ProjectCDTT_63132701/Views/san_pham/Index.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Index.cshtml
@@ -20,7 +20,7 @@
             <div class="carousel-caption d-flex flex-column align-items-start text-white">
                 <h1>WELCOME TO KIM YẾN</h1>
                 <p>Thời trang - Độc đáo - Giá trị bền vững</p>
-                <a href="@Url.Action("Shop", "SanPham")" class="btn btn-dark">XEM NGAY</a>
+               
             </div>
         </div>
 
@@ -30,7 +30,7 @@
             <div class="carousel-caption d-flex flex-column align-items-start text-white">
                 <h1>WELCOME TO KIM YẾN</h1>
                 <p>Thời trang - Độc đáo - Giá trị bền vững</p>
-                <a href="@Url.Action("Shop", "SanPham")" class="btn btn-dark">XEM NGAY</a>
+
             </div>
         </div>
 
@@ -40,7 +40,7 @@
             <div class="carousel-caption d-flex flex-column align-items-start text-white">
                 <h1>WELCOME TO KIM YẾN</h1>
                 <p>Thời trang - Độc đáo - Giá trị bền vững</p>
-                <a href="@Url.Action("Shop", "SanPham")" class="btn btn-dark">XEM NGAY</a>
+               
             </div>
         </div>
     </div>
@@ -58,29 +58,30 @@
 
 
 <!-- Danh mục nổi bật -->
-<section class="categories py-5">
+<section class="featured py-5">
     <div class="container">
-        <h2 class="text-center mb-4">DANH MỤC NỔI BẬT</h2>
-        <div class="row text-center">
-            <div class="col-md-3">
-                <img src="~/Images/nhan3.jpg" class="img-thumbnail" alt="Nhẫn Bạc">
-                <h3>Nhẫn</h3>
+        <h2 class="text-center mb-4">MUA SẮM THEO DANH MỤC</h2>
+        <div class="row justify-content-center text-center">
+            <div class="col-6 col-md-3 mb-3">
+                <a href="/San_pham/Day_Chuyen" class="category-btn w-100 py-3 rounded-pill">Dây chuyền</a>
             </div>
-            <div class="col-md-3">
-                <img src="~/Images/vongtay1.jpg" class="img-thumbnail" alt="Vòng Tay">
-                <h3>Vòng tay</h3>
+            <div class="col-6 col-md-3 mb-3">
+                <a href="/San_pham/Nhan" class="category-btn w-100 py-3 rounded-pill">Nhẫn</a>
             </div>
-            <div class="col-md-3">
-                <img src="~/Images/bongtai1.jpg" class="img-thumbnail" alt="Hoa Tai">
-                <h3>Bông tai</h3>
+            <div class="col-6 col-md-3 mb-3">
+                <a href="/San_pham/Bong_Tai" class="category-btn w-100 py-3 rounded-pill">Bông tai</a>
             </div>
-            <div class="col-md-3">
-                <img src="~/Images/mau10.jpg" class="img-thumbnail" alt="Dây Chuyền">
-                <h3>Dây chuyền</h3>
+            <div class="col-6 col-md-3 mb-3">
+                <a href="/San_pham/Lac_Tay" class="category-btn w-100 py-3 rounded-pill">Lắc tay</a>
             </div>
         </div>
     </div>
 </section>
+
+
+
+
+
 
 
 <!-- Bộ sưu tập mới -->
