--- a/ProjectCDTT_63132701/Content/styleAdmin.css
+++ b/ProjectCDTT_63132701/Content/styleAdmin.css
@@ -1,10 +1,8 @@
-﻿/* Header */
-#menu {
-    background-color: #f5f6f7;
+﻿#menu {
+    background-color: #F5F6F7;
     padding: 15px 0;
 }
 
-/* Tổng thể header */
 .header-container {
     display: flex;
     align-items: center;
@@ -14,25 +12,25 @@
     height: 100px;
 }
 
-/* Tìm kiếm */
+
 .header-left {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.header-left input {
-    padding: 7px 12px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-    width: 230px;
-}
+    .header-left input {
+        padding: 7px 12px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        outline: none;
+        width: 230px;
+    }
 
-.header-left i {
-    font-size: 18px;
-    color: #333;
-}
+    .header-left i {
+        font-size: 18px;
+        color: #333;
+    }
 
 /* Chỉnh logo to hơn */
 .header-center img {
@@ -48,23 +46,23 @@
     font-size: 20px;
 }
 
-.header-right div {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
+    .header-right div {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
 
-.header-right i {
-    color: black;
-}
+    .header-right i {
+        color: black;
+    }
 
-.header-right span {
-    background-color: #ddd;
-    border-radius: 50%;
-    padding: 2px 6px;
-    font-size: 14px;
-    font-weight: bold;
-}
+    .header-right span {
+        background-color: #ddd;
+        border-radius: 50%;
+        padding: 2px 6px;
+        font-size: 14px;
+        font-weight: bold;
+    }
 
 /* NAVIGATION MENU */
 .nav-container {
@@ -86,17 +84,17 @@
     text-transform: none;
 }
 
-.nav_menu a {
-    text-decoration: none;
-    color: #333; 
-    font-weight: 500;
-    transition: color 0.3s ease-in-out;
-    position: relative;
-}
+    .nav_menu a {
+        text-decoration: none;
+        color: #333;
+        font-weight: 500;
+        transition: color 0.3s ease-in-out;
+        position: relative;
+    }
 
-.nav_menu a:hover {
-    color: black;
-}
+        .nav_menu a:hover {
+            color: black;
+        }
 
 .footer {
     background-color: #fff;
@@ -117,16 +115,16 @@
     text-align: left;
 }
 
-.footer-section h3 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
+    .footer-section h3 {
+        font-size: 16px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
 
-.footer-section span {
-    font-size: 14px;
-    color: gray;
-}
+    .footer-section span {
+        font-size: 14px;
+        color: gray;
+    }
 
 .footer-contact {
     display: flex;
@@ -137,10 +135,10 @@
     margin: 5px 0;
 }
 
-.footer-contact i {
-    font-size: 24px;
-    margin-right: 10px;
-}
+    .footer-contact i {
+        font-size: 24px;
+        margin-right: 10px;
+    }
 
 .footer-section img {
     max-width: 100%;
@@ -155,12 +153,12 @@
     margin-top: 10px;
 }
 
-.footer-socials i {
-    font-size: 20px;
-    cursor: pointer;
-    transition: 0.3s;
-}
+    .footer-socials i {
+        font-size: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+    }
 
-.footer-socials i:hover {
-    color: #c0392b;
-}
+        .footer-socials i:hover {
+            color: #c0392b;
+        }
