--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -28,27 +28,35 @@
             <input type="hidden" name="MaSP" value="@Model.MaSP" />
             <input type="hidden" name="returnUrl" value="@Request.QueryString["returnUrl"]" />
             <label for="SoLuong">Số lượng:</label>
-            <input type="number" name="SoLuong" value="1" min="1" required />
-            <button class="btn btn-dark btn-add-to-cart">Thêm vào giỏ hàng</button>
+            <input type="number" name="SoLuong" value="1" min="1" max="@Model.SoLuong" required />
+            <div class="button-group">
+                <button class=" btn-buy-now">Mua ngay</button>
+                <button type="submit" formaction="@Url.Action("AddToCart", "San_pham")" formmethod="post" class="btn btn-add-to-cart">
+                    <i class="fa fa-shopping-bag"></i>
+                    <span>Thêm vào giỏ</span>
+                </button>
 
+            </div>
         </form>
     </div>
 </div>
 
 
-
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-    @if (TempData["ErrorMessage"] != null)
-    {
-        <text>
+    document.querySelector("form").addEventListener("submit", function (e) {
+        var input = document.querySelector("input[name='SoLuong']");
+        var max = parseInt(input.max);
+        var val = parseInt(input.value);
+        if (val > max) {
+            e.preventDefault();
             Swal.fire({
-                icon: 'error',
-                text: '@Html.Raw(TempData["ErrorMessage"])',
+                icon: 'warning',
+                text: 'Số lượng đặt hàng vượt quá số lượng còn lại!',
                 confirmButtonText: 'Đóng'
             });
-        </text>
-    }
+        }
+    });
 </script>
+
 
 
