--- a/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
@@ -20,7 +20,7 @@
 
 <body>
 
-    <h2>1. DỊCH VỤ BẢO HÀNH MIỄN PHÍ</h2>
+    <h2>1. Dịch vụ bảo hành miễn phí</h2>
 
     <table>
         <thead>
@@ -58,7 +58,7 @@
     </table>
     <p class="table-note">Bảng 1</p>
 
-    <h2>2. DỊCH VỤ BẢO HÀNH TÍNH PHÍ</h2>
+    <h2>2. Dịch vụ bảo hành tính phí</h2>
 
     <table>
         <thead>
