--- a/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
@@ -7,7 +7,7 @@
     <!-- Thư viện CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/style.css">
+    <link href="~/Content/styleAdmin.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/thuonghieu.css">
     <!-- Bootstrap JS và jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
